[package]
name = "cupp-rust-snd"
version = "0.1.0"
authors = ["cameron <chunt137@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "4.0.2"
rand ="0.8.3"
threadpool = "1.0"
scoped_threadpool = "0.1.9"